--- a/leetcodes/015.3Sum.md
+++ b/leetcodes/015.3Sum.md
@@ -106,3 +106,99 @@ public  List<List<Integer >> threeSum(int[] nums){
 
 
 ```
+
+```
+
+public  List<List<Integer >> threeSum(int[] nums){
+
+  // 1, build a result list
+
+  // 2. check the length
+
+  // 3. search the position of 0
+
+  // 4. determine the number of 0 and the last negative and first positive
+
+  // 5. use an array to count the number of each number
+
+  // 6. if there are more than 3 0, add [0,0,0] to the result list
+
+  // 7.
+}
+
+
+
+```
+
+```
+
+public List<List<Integer >> threeSum(int[] nums){
+  List<List<Integer >> res = new ArrayList();
+
+  if( nums== null || nums.length <= 2){
+    return  res;
+  }
+  int l = nums.length;
+  java.util.Arrays.sort(nums); //Collections.reverseOrder()
+
+  int lastNeg = int pos = Arrays.binarySearch(nums, 0);// otherwise, (-(insertion point) – 1)
+  int firstPos = lastNeg;
+  int numZero;
+
+
+  if(lastNeg < 0){
+    // if there are no zero;
+    lastNeg = (-lastNeg - 1) - 1 ; // insertion position - 1
+    firstPos = lastNeg = lastNeg + 1;
+    numZero = 0;
+
+
+  } // end of if
+  else{
+
+    while(lastNeg>=0 && nums[lastNeg] == 0){lastNeg --;} // end of if
+    while(firstPos <l && nums[firstPos] == 0){firstPos ++;} // end of while
+    numZero = firstPos - lastNeg - 1;
+  }
+
+  int min = nums[0];
+  int max = nums[l-1];
+  int[] dict = new int[max-min+1]; // for example max 2, min 0, then we need 3
+  for(int i = 0; i < l ; i++){
+      dict[nums[i] - min] ++;
+  } // end of for i
+
+  // case 1, all 0
+  if(numZero > 2){
+    res.add(Arrays.asList(0,0,0));
+  } // end of if
+
+  // case 2, 0 pos neg
+  for(int i = firstPos; i < l ; i++){
+    if(nums[i] == nums[i-1]){
+      continue;
+    } // end of if
+
+    int pos = -nums[i] - min;
+    if(pos > 0 && dict[pos] > 0){
+        res.add(Arrays.asList(-nums[i],0,nums[i]));
+    } // end of if
+
+
+  } // end of for i
+
+  // case 3, 1 pos 2 neg
+
+  for(int i = firstPos; i < l ; i++){
+      if(nums[i] == nums[i-1]){
+          continue;
+      } // end of if
+
+      
+  } // end of for i
+
+
+}
+
+
+```
