--- a/leetcodes/076. Minimum Window Substring.md
+++ b/leetcodes/076. Minimum Window Substring.md
@@ -359,3 +359,95 @@ class Solution {
 
 
 ```
+
+
+```
+
+
+    public String minWindow(String s, String t) {
+        int m = s.length();
+        int n = t.length();
+        if (m < n) return "";
+        int[] array = new int[256];
+        for (char c: t.toCharArray()){
+            array[c]++;
+        }
+
+        int start = 0, res = 0;
+        int len = Integer.MAX_VALUE;
+        int end = 0;
+        while (end < m) {
+            char cur = s.charAt(end);
+            if (array[cur] > 0) {
+                n--;
+            }
+            array[cur]--;
+
+            while(n == 0) {
+                if (len > end - start + 1) {
+                    len = end - start + 1;
+                    res = start;
+                }
+                char c2 = s.charAt(start);
+                array[c2]++;
+                if (array[c2] > 0) n++;
+                start++;
+            }
+            end++;
+        }
+        return len == Integer.MAX_VALUE ? "" : s.substring(res,res+len);
+    }
+
+
+```
+
+
+```
+
+public String minWindom(String s, String t){
+  int m = s.length() ;
+  int n = t.length() ;
+
+  if(m < n){
+    return  "";
+  } // END of if
+
+  int[] dict = new int[256];
+
+  for(char c: t.toCharArray() ){
+      dict[c] ++;
+  } // END of for
+
+  int len = Integer.MAX_VALUE;
+  int start = 0, end = 0;
+
+  int res = 0;
+
+  while(  end < start){
+      if(dict[s.charAt(end++)] -- >0 ){
+        count --;
+        } // END of if
+      while(  count == 0){
+          if(len > end - start){
+              len = end - start;
+              res = start;
+          } // END of if
+          char c2 = s.charAt(start);
+          dict[c2] ++;
+          if(dict[c2]>0){
+            count ++;
+          } // END of if
+
+          start++;
+      } // END of while
+  } // END of while
+
+  return len == Integer.MAX_VALUE? "" : s.substring(start, end);
+
+
+
+}
+
+
+
+```
