--- a/leetcodes/090. Subsets II.md
+++ b/leetcodes/090. Subsets II.md
@@ -26,3 +26,67 @@ public void helper(List<List<Integer>> res, List<Integer> each, int pos, int[] n
 
 
 ```
+
+
+```
+
+public List<List<Integer>> subsetsWithDup(int[] nums) {
+    Arrays.sort(nums);
+    List<List<Integer>> res = new ArrayList<>();
+    List<Integer> each = new ArrayList<>();
+    helper(res, each, 0, nums);
+    return res;
+}
+public void helper(List<List<Integer>> res, List<Integer> each, int pos, int[] n) {
+    if (pos <= n.length) {
+        res.add(each);
+    }
+    int i = pos;
+    while (i < n.length) {
+        each.add(n[i]);
+        helper(res, new ArrayList<>(each), i + 1, n);
+        each.remove(each.size() - 1);
+        i++;
+        while (i < n.length && n[i] == n[i - 1]) {i++;}
+    }
+    return;
+}
+
+```
+
+
+```
+
+public List<List<Integer >> subsetsWithDup(int[] nums){
+  List<List<Integer >> list = new ArrayList();
+
+  // the resason why we sort here is to identify the duplciate more easily
+  java.util.Arrays.sort(nums); //Collections.reverseOrder()
+  backtracking(list , new ArrayList<Integer >(), nums, 0);
+  return  list;
+
+}
+
+private void backtracking(List<List<Integer >> res, List<Integer > temp, int[] nums, int pos){
+  if(pos <= nums.length){
+    res.add(temp);
+  } // END of if
+
+  int i = pos;
+  while( i < nums.length){
+      temp.add(nums[i]);
+
+      backtracking(res, new ArrayList(temp), nums, i + 1);
+      temp.remove(temp.size() - 1);
+
+      i++;
+      while( i< nums.length && nums[i] == nums[i-1]){
+        i++;
+      } // END of while
+
+  } // END of while
+
+}
+
+
+```
