--- a/leetcodes/000. cm的日常打卡.md
+++ b/leetcodes/000. cm的日常打卡.md
@@ -1,9 +1,14 @@
+something i cannot express
 
-| Time        |                   |
-| ----------- | ----------------- |
-|             |                   |
-| 7:30 - 8:00 | {4, have no idea} |
-| 8:00 - 9:00 | pramp             |
-|             |                   |
-|             |                   |
-|             |                   |
+1. 你需要累加这些量，然后在没一秒的最后跟前一个最优值进行比较。
+
+you need to accumulate these values and compare the end state of each second with the previous second. 
+
+---
+
+
+how can i decide if i need to solve this problem again in the future, and why i need to do that,
+
+if i really understood it, i think you dont need to do it for a lot of times or mayber you just need several minutes to do it again, but what is important is the way you think about those problems, i mean the patter stuff
+
+people can be divided into groups just like leetcode problems can be divided into problems.
