--- a/leetcodes/085. Maximal Rectangle.md
+++ b/leetcodes/085. Maximal Rectangle.md
@@ -1,3 +1,71 @@
+
+```
+
+public int maximalRectangle(int[][] A){
+  if( A== null || A.length == 0 || A[0].length == 0){
+    return 0;
+  }
+
+  int row = A .length, col =  A[0].length;
+  int[] heights = new int[col];
+  int[] left = new int[col];
+  int[] right = new int[col];
+  Arrays.fill(right, col);
+
+  int res = 0;
+
+  for(int i = 0; i < row ; i++){
+      int curleft =0;
+      int curright = 0;
+      for(int j = 0; j < col ; j++){
+          if(A[i][j] == '1'){
+            heights[j] += 1;
+
+          } // END of if
+          else{
+            heights[j] = 0;
+          }
+      } // END of for j
+
+      for(int j = 0; j < col ; j++){
+        if(A[i][j] == '1'){
+          left[j] = Math.max(left[j], curleft);
+        } // END of if
+        else{
+          left[j] = 0;
+          curleft = j+1;
+
+        }
+      } // END of for j
+
+
+      for(int j = col-1; j >=0  ; j--){
+        if(A[i][j] == '1'){
+          right[j] = Math.min(right[j], curright);
+        } // END of if
+        else{
+          right[j] = col;
+          curright = j;
+
+        }
+      } // END of for j
+
+      for(int j = 0; j < col ; j++){
+        res = Math.max(res, (right[j] - left[j]) * heights[j]);
+        } // END of for j
+  } // END of for i
+
+return res;
+
+
+}
+
+
+```
+
+
+---
+
 Given a 2D binary matrix filled with 0's and 1's, find the largest rectangle containing only 1's and return its area.
 
 Example:
