--- a/leetcodes/149. Max Points on a Line.md
+++ b/leetcodes/149. Max Points on a Line.md
@@ -64,11 +64,44 @@ public class Solution{
 
     } // END of for
 
-    
+
 
   }
 
 }
+
+
+```
+
+
+```
+
+    public int maxPoints(Point[] points) {
+        if(points.length <= 2) return points.length;
+        int max = 0;
+        for(int i = 1;i<points.length;i++){
+            long x1 = points[i-1].x;
+            long y1 = points[i-1].y;
+            long x2 = points[i].x;
+            long y2 = points[i].y;
+            long x = x2 - x1;
+            long y = y2 - y1;
+            int counts = 0;
+            if(x == 0 && y == 0){
+                for(int j = 0;j<points.length;j++){
+                    if(points[j].x == x1 && points[j].y == y1)
+                        counts++;
+                }
+            }else{
+                for(int j = 0;j<points.length;j++){
+                    if(x * (points[j].y - y1) == y * (points[j].x - x1))
+                        counts++;
+                }
+            }
+            max = Math.max(counts,max);
+        }
+        return max;
+    }
 
 
 ```
