--- a/leetcodes/265. Paint House II.md
+++ b/leetcodes/265. Paint House II.md
@@ -111,3 +111,44 @@ for(int j = 0; j < k ; j++){
   } // end of for I
 
 return A[n-1][min1];
+
+
+
+```
+
+public int minCostII(int[][] costs){
+  if( costs== null || costs.length == 0 || costs[0].length == 0){
+    return  0;
+  }
+
+  int row = costs .length, col =  costs[0].length;
+
+  int min1 = -1, min2 = -1;
+
+  for(int i = 0; i < row ; i++){
+    int last1 = min1, last2 = min2;
+    min1 = -1;
+    min2 = -1;
+
+    for(int j = 0; j < col ; j++){
+
+      if(j != last1){
+        costs[i][j] += last1<0?0:costs[i-1][last1];
+      } // END of if
+        costs[i][j] += last2<0?0:costs[i-1][last2];
+      } // END of for j
+
+      if(min1<0 && cost[i][j] < cost[i][min1]){
+        min2 = min1;
+        min1 = j;
+      } // END of if
+      else if(min2<0 && cost[i][j] < costs[i][min2]){
+        min2 = j;
+      } // END of if
+
+
+  } // END of for i
+}
+
+
+```
